still incomplete but compiling without errors

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ out
 .settings
 *.cmdenv-log
 *.qtenvrc
+idaWirelessSimulator
+idaWirelessSimulator_dbg
 src/idaWirelessSimulator
 src/idaWirelessSimulator_dbg
 ./*/results
