fixed first problems with writer, data now received by the writer

--- a/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
+++ b/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
@@ -12,20 +12,21 @@ sim-time-limit = 100s
 # =============================================
 # ============= configuration =================
 # =============================================
+**.rtps.nbrReadersPerApp = 1
 
 *.hostA.rtps.nbrApps = 1
 *.hostA.rtps.nbrWriters = 1
 *.hostA.rtps.nbrReaders = 0
-*.hostA.rtps.nbrReadersPerApp = 0
+*.hostA.rtps.writer[0].destAddresses = "hostB"
 
 
 *.hostB.rtps.nbrApps = 0
 *.hostB.rtps.nbrWriters = 0
 *.hostB.rtps.nbrReaders = 1
-*.hostB.rtps.nbrReadersPerApp = 1
+*.hostB.rtps.reader[1].destAddresses = "hostA"
 
 *.hostA.rtps.writer[0].appID = 0
-*.hostA.rtps.writer[0].numReaders = 0
+*.hostA.rtps.writer[0].numberReaders = 1
 
 *.hostB.rtps.reader[0].appID = 0
 #*.hostB.rtps.reader[0].
