changes to reader and writer

--- a/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
+++ b/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
@@ -13,7 +13,7 @@ sim-time-limit = 100s
 singleLink.camera.numberWriterApps = 1
 singleLink.vehicle.numberReaderApps = 1
 
-singleLink.camera.rtpsAppWriter[*].sampleSize = 20000B
+singleLink.camera.rtpsAppWriter[*].sampleSize = 3000B
 singleLink.camera.rtpsAppWriter[*].samplePeriod = 100ms
 singleLink.camera.rtpsAppWriter[*].jitter = 0ms 
 singleLink.camera.rtpsAppWriter[*].offset = 0ms
@@ -27,11 +27,13 @@ singleLink.**.rtps.nbrApps = 1
 singleLink.**.rtps.nbrReadersPerApp = 1
 
 # Writer configuration
-singleLink.**.rtps.writer[*].numberReaders = 1
+singleLink.**.rtps.writer[*].numberReaders = 1 
 singleLink.camera.rtps.writer[0].numberReaders = 1
 singleLink.camera.rtps.writer[0].fragmentSize = 1000
-singleLink.camera.rtps.writer[0].shaping = 2000us
+singleLink.camera.rtps.writer[0].shaping = 10us
 singleLink.camera.rtps.writer[0].deadline = 100ms
+
+singleLink.camera.rtps.writer[0].hbPeriod = 2ms
 
 # Reader configuration
 # TODO configure answer delay if configured
