fixed issue related to multiple samples stored at the same time, now removes sample properly at the right time

--- a/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
+++ b/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
@@ -33,7 +33,7 @@ singleLink.camera.rtps.writer[0].fragmentSize = 1000
 singleLink.camera.rtps.writer[0].shaping = 10us
 singleLink.camera.rtps.writer[0].deadline = 100ms
 
-singleLink.camera.rtps.writer[0].hbPeriod = 2ms
+singleLink.camera.rtps.writer[0].hbPeriod = 33ms
 
 # Reader configuration
 # TODO configure answer delay if configured
@@ -78,7 +78,7 @@ singleLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 singleLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 singleLink.**.wlan[0].queue.packetCapacity = 100
-singleLink.**.wlan[0].mac.biterrorrate = 0.00004
+singleLink.**.wlan[0].mac.bitErrorRate = 0.00004
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
