quick and dirty fix in csma ca mod to enable mutlicast communication

--- a/simulations/examples/simpleRTPSMultiLink/simpleRTPSMultiLink.ini
+++ b/simulations/examples/simpleRTPSMultiLink/simpleRTPSMultiLink.ini
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------
 [General]
 description = Two hosts communicating wirelessly
-network = simulations.examples.simpleW2RPSingleLink.singleLink
+network = simulations.examples.simpleRTPSMultiLink.multiLink
 seed-0-mt=732195
 sim-time-limit = 100s
 **.startTime = 0s     
@@ -10,30 +10,31 @@ sim-time-limit = 100s
 # ============= Application layer =================
 # =================================================
 
-singleLink.camera.numberWriterApps = 1
-singleLink.vehicle.numberReaderApps = 1
+multiLink.numberReceivingNodes = ${n=2}
 
-singleLink.camera.rtpsAppWriter[*].sampleSize = 3000B
-singleLink.camera.rtpsAppWriter[*].samplePeriod = 100ms
-singleLink.camera.rtpsAppWriter[*].jitter = 0ms 
-singleLink.camera.rtpsAppWriter[*].offset = 0ms
+multiLink.sender.numberWriterApps = 1
+multiLink.receivers*.numberReaderApps = 1
+
+multiLink.sender.rtpsAppWriter[*].sampleSize = 3000B
+multiLink.sender.rtpsAppWriter[*].samplePeriod = 100ms
+multiLink.sender.rtpsAppWriter[*].jitter = 0ms 
+multiLink.sender.rtpsAppWriter[*].offset = 0ms
 
 # =================================================
 # ============== Middleware layer =================
 # =================================================
 
 # RTPS module
-singleLink.**.rtps.nbrApps = 1
-singleLink.**.rtps.nbrReadersPerApp = 1
+multiLink.**.rtps.nbrApps = 1
+multiLink.**.rtps.nbrReadersPerApp = 1
 
-# Writer configuration
-singleLink.**.rtps.writer[*].numberReaders = 1 
-singleLink.camera.rtps.writer[0].numberReaders = 1
-singleLink.camera.rtps.writer[0].fragmentSize = 1000
-singleLink.camera.rtps.writer[0].shaping = 10us
-singleLink.camera.rtps.writer[0].deadline = 100ms
+# Writer configuration  
+multiLink.sender.rtps.writer[0].numberReaders = ${n}
+multiLink.sender.rtps.writer[0].fragmentSize = 1000
+multiLink.sender.rtps.writer[0].shaping = 10us
+multiLink.sender.rtps.writer[0].deadline = 100ms
 
-singleLink.camera.rtps.writer[0].hbPeriod = 33ms
+multiLink.sender.rtps.writer[0].hbPeriod = 33ms
 
 # Reader configuration
 # TODO configure answer delay if configured
@@ -43,23 +44,19 @@ singleLink.camera.rtps.writer[0].hbPeriod = 33ms
 # ================ Connectivity ===================
 # =================================================
 
-*.camera.rtps.inetAdapter.interfaceTableModule = ""
-*.camera.rtps.writer[0].destAddresses = "vehicle"
-*.camera.rtps.writer[0].appID = 0
-*.camera.rtps.inetAdapter.localPort = 200
-*.camera.rtps.inetAdapter.destPort = 100
-#*.camera.rtps.inetAdapter.destAddresses = "vehicle"
-#*.camera.rtps.inetAdapter.localAddress = "camera"
+*.sender.rtps.writer[0].destAddresses = "224.0.0.1"
+*.sender.rtps.writer[0].appID = 0
+*.sender.rtps.inetAdapter.interfaceTableModule = "^.^.interfaceTable"
+*.sender.rtps.inetAdapter.localPort = 200
+*.sender.rtps.inetAdapter.destPort = 100
 
-*.vehicle.rtps.inetAdapter.interfaceTableModule = ""
-*.vehicle.rtps.reader[0].destAddresses = "camera"
-*.vehicle.rtps.reader[0].appID = 0
-*.vehicle.rtps.inetAdapter.localPort = 100 
-*.vehicle.rtps.inetAdapter.destPort = 200
-#*.vehicle.rtps.inetAdapter.destAddresses = "camera"
-#*.vehicle.rtps.inetAdapter.localAddress = "vehicle"
+*.receivers[*].rtps.reader[0].destAddresses = "sender"
+*.receivers[*].rtps.reader[0].appID = 0
+*.receivers[*].rtps.inetAdapter.interfaceTableModule = "^.^.interfaceTable"
+*.receivers[*].rtps.inetAdapter.localPort = 100 
+*.receivers[*].rtps.inetAdapter.destPort = 200
 
-
+*.*.rtps.inetAdapter.joinLocalMulticastGroups = true
 
 # =================================================
 # ================== IP Layer =====================
@@ -73,12 +70,12 @@ singleLink.camera.rtps.writer[0].hbPeriod = 33ms
 # ================= MAC - Layer ===================
 # =================================================
 
-singleLink.**.wlan[0].typename = "WirelessInterface"
-singleLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
-singleLink.**.wlan[0].queue.typename = "DropTailQueue"
+multiLink.**.wlan[0].typename = "WirelessInterface"
+multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
+multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
-singleLink.**.wlan[0].queue.packetCapacity = 100
-singleLink.**.wlan[0].mac.bitErrorRate = 0.00004
+multiLink.**.wlan[0].queue.packetCapacity = 100
+multiLink.**.wlan[0].mac.bitErrorRate = 0.00004
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
@@ -86,11 +83,11 @@ singleLink.**.wlan[0].mac.bitErrorRate = 0.00004
 
 # CSMA/CA configuration
 
-singleLink.**.wlan[0].mac.sifsTime = 14us
-singleLink.**.wlan[0].mac.slotTime = 9us
+multiLink.**.wlan[0].mac.sifsTime = 14us
+multiLink.**.wlan[0].mac.slotTime = 9us
 
-singleLink.**.wlan[0].mac.ta = 222
-singleLink.**.wlan[0].mac.ta_enable = true
+multiLink.**.wlan[0].mac.ta = 222
+multiLink.**.wlan[0].mac.ta_enable = true
 #*.**.wlan[0].mac.cwMin = 82
 #*.**.wlan[0].mac.cwMax = 82
 
@@ -99,7 +96,7 @@ singleLink.**.wlan[0].mac.ta_enable = true
 # ======================================================
 
 
-singleLink.**.wlan[0].**.bitrate = 27Mbps
+multiLink.**.wlan[0].**.bitrate = 27Mbps
 
 *.**.wlan[0].radio.typename = "UnitDiskRadio"
 *.**.wlan[0].radio.transmitter.communicationRange = 1000m
@@ -142,5 +139,5 @@ singleLink.**.wlan[0].**.bitrate = 27Mbps
 # ============ Configurator =============
 # =======================================
 
-*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+*.configurator.config = xmldoc("config.xml")
 *.configurator.optimizeRoutes = false
