fixed issue: used the same sequence number for all samples, also reader was not able to cope with multiple samples in cache

--- a/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
+++ b/simulations/examples/simpleW2RPSingleLink/simpleW2RPLink.ini
@@ -32,10 +32,10 @@ singleLink.camera.rtps.writer[0].numberReaders = 1
 singleLink.camera.rtps.writer[0].fragmentSize = 1000
 singleLink.camera.rtps.writer[0].shaping = 10us
 singleLink.camera.rtps.writer[0].deadline = 100ms
-
 singleLink.camera.rtps.writer[0].hbPeriod = 33ms
 
 # Reader configuration
+singleLink.vehicle.rtps.reader[0].deadline = 100ms
 # TODO configure answer delay if configured
 
 
