moved network ned files to separate folder to be reusable in other simulation configs (ini files), renamed W2RP config to more accurately correspond to the basic RTPS protocol used there atm

--- a/simulations/examples/simpleRTPSSingleLink/simpleRTPSLink.ini
+++ b/simulations/examples/simpleRTPSSingleLink/simpleRTPSLink.ini
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------
 [General]
 description = Two hosts communicating wirelessly
-network = simulations.examples.simpleW2RPSingleLink.singleLink
+network = simulations.networks.singleLink
 seed-0-mt=732195
 sim-time-limit = 100s
 **.startTime = 0s     
@@ -142,5 +142,5 @@ singleLink.**.wlan[0].**.bitrate = 27Mbps
 # ============ Configurator =============
 # =======================================
 
-*.configurator.config = xml("<config><interface hosts='**' address='10.0.0.x' netmask='255.255.255.0'/><autoroute metric='errorRate'/></config>")
+*.configurator.config = xmldoc("config.xml")
 *.configurator.optimizeRoutes = false
