--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -1,7 +1,7 @@
 #-----------------------------------------------------------------------------
 [General]
 description = Two hosts communicating wirelessly
-network = simulations.examples.simpleWiMEPMultiLink.multiLink
+network = simulations.networks.multiLink
 seed-0-mt=732195
 sim-time-limit = 100s
 **.startTime = 0s     
