added procedure for replicating the exchange of parameteres such as done by the discovery process - here for the reader priorities needed at the writer when WiMEP is used

--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -26,7 +26,7 @@ multiLink.sender.rtpsAppWriter[*].offset = 0ms
 
 # RTPS module
 multiLink.**.rtps.nbrApps = 1
-multiLink.**.rtps.nbrReadersPerApp = 1
+multiLink.**.rtps.nbrReadersPerApp = ${3}
 
 # Writer configuration  
 multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
@@ -39,6 +39,10 @@ multiLink.sender.rtps.writer[0].hbPeriod = 33ms
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].deadline = 100ms
 # TODO configure answer delay if configured
+
+multiLink.receivers[0].rtps.reader[0].priority = 1
+multiLink.receivers[1].rtps.reader[0].priority = 2
+multiLink.receivers[2].rtps.reader[0].priority = 3
 
 
 # =================================================
