created Reader for WiMEP that allows for priority configuration

--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -37,6 +37,7 @@ multiLink.sender.rtps.writer[0].deadline = 100ms
 multiLink.sender.rtps.writer[0].hbPeriod = 33ms
 
 # Reader configuration
+multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
 multiLink.receivers[*].rtps.reader[0].deadline = 100ms
 # TODO configure answer delay if configured
 
