moved WiMEP code to separate folder

--- a/simulations/examples/simpleRTPSSingleLink/simpleRTPSLink.ini
+++ b/simulations/examples/simpleRTPSSingleLink/simpleRTPSLink.ini
@@ -35,6 +35,7 @@ singleLink.camera.rtps.writer[0].deadline = 100ms
 singleLink.camera.rtps.writer[0].hbPeriod = 33ms
 
 # Reader configuration
+singleLink.vehicle.rtps.reader[0].typename = "Reader"
 singleLink.vehicle.rtps.reader[0].deadline = 100ms
 # TODO configure answer delay if configured
 
