--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -34,7 +34,7 @@ multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 1000
 multiLink.sender.rtps.writer[0].shaping = 1000us
 multiLink.sender.rtps.writer[0].deadline = 100ms
-multiLink.sender.rtps.writer[0].hbPeriod = 33ms
+multiLink.sender.rtps.writer[0].timeout = 5000us
 
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
