--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -3,7 +3,7 @@
 description = Two hosts communicating wirelessly
 network = simulations.networks.multiLink
 seed-0-mt=732195
-sim-time-limit = 100s
+sim-time-limit = 99.999999s
 **.startTime = 0s     
 
 # =================================================
@@ -81,7 +81,7 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = 0.00004
+multiLink.**.wlan[0].mac.bitErrorRate = 0#0.00004
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
