fixed WiMEP bug related to canceling of tx timer even if timeouts were still active

--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -81,7 +81,7 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = 0#0.00004
+multiLink.**.wlan[0].mac.bitErrorRate = 0.00004
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
