added possibility to simulate dependent signal paths by introducing a parameter to CsmaCaMacModified to toggle between independent and dependent paths

--- a/simulations/examples/simpleRTPSMultiLink/simpleRTPSMultiLink.ini
+++ b/simulations/examples/simpleRTPSMultiLink/simpleRTPSMultiLink.ini
@@ -77,6 +77,7 @@ multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
 multiLink.**.wlan[0].mac.bitErrorRate = 0.00004
+multiLink.**.wlan[0].mac.dependentSignalPaths = false
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
