--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -82,6 +82,7 @@ multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
 multiLink.**.wlan[0].mac.bitErrorRate = 0.00004
+multiLink.**.wlan[0].mac.dependentSignalPaths = true
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
