more owrk on eval scripts

--- a/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
+++ b/simulations/examples/simpleWiMEPMultiLink/simpleWiMEPMultiLink.ini
@@ -81,7 +81,7 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = 0.00004
+multiLink.**.wlan[0].mac.bitErrorRate = ${0, 0.00000559, 0.00001147, 0.0000177, 0.0000243, 0.00003132, 0.00003884, 0.0000469, 0.00005562, 0.00006509, 0.00007547, 0.00008694, 0.00009977, 0.0001143, 0.00013109, 0.00015094, 0.00017523, 0.00020655, 0.00025069, 0.00032614}#0.00004
 multiLink.**.wlan[0].mac.dependentSignalPaths = false
 
 # MAC retreansmissions
@@ -93,7 +93,7 @@ multiLink.**.wlan[0].mac.dependentSignalPaths = false
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = 222
+multiLink.**.wlan[0].mac.ta = ${56, 111, 167, 222}
 multiLink.**.wlan[0].mac.ta_enable = true
 #*.**.wlan[0].mac.cwMin = 82
 #*.**.wlan[0].mac.cwMax = 82
