--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ idaWirelessSimulator_dbg
 src/idaWirelessSimulator
 src/idaWirelessSimulator_dbg
 ./*/results
-./*/output
+**/output
 simulations/idaWirelessSimulator
 simulations/idaWirelessSimulator_dbg
 *.sca
