fixed issue related to aggregating FER in multicast examples

--- a/simulations/examples/WiMEPMultiLink/WiMEPMultiLink.ini
+++ b/simulations/examples/WiMEPMultiLink/WiMEPMultiLink.ini
@@ -2,7 +2,7 @@
 [General]
 description = Two hosts communicating wirelessly
 network = simulations.networks.multiLink
-seed-0-mt=732195
+seed-0-mt=732195122
 sim-time-limit = 9.999999s
 **.startTime = 0s     
 
@@ -15,7 +15,7 @@ multiLink.numberReceivingNodes = ${n=3}
 multiLink.sender.numberWriterApps = 1
 multiLink.receivers*.numberReaderApps = 1
 
-multiLink.sender.rtpsAppWriter[*].sampleSize = 15000B
+multiLink.sender.rtpsAppWriter[*].sampleSize = 20000B
 multiLink.sender.rtpsAppWriter[*].samplePeriod = 100ms
 multiLink.sender.rtpsAppWriter[*].jitter = 0ms 
 multiLink.sender.rtpsAppWriter[*].offset = 0ms
@@ -31,10 +31,10 @@ multiLink.**.rtps.nbrReadersPerApp = ${3}
 # Writer configuration  
 multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
-multiLink.sender.rtps.writer[0].fragmentSize = 1000
-multiLink.sender.rtps.writer[0].shaping = 2000us
+multiLink.sender.rtps.writer[0].fragmentSize = 800
+multiLink.sender.rtps.writer[0].shaping = ${sh=1000us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
-multiLink.sender.rtps.writer[0].timeout = 5000us
+multiLink.sender.rtps.writer[0].timeout = ${2*$sh - 1us}
 
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
@@ -81,19 +81,18 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = ${0, 0.00000559, 0.00001147, 0.0000177, 0.0000243, 0.00003132, 0.00003884, 0.0000469, 0.00005562, 0.00006509, 0.00007547, 0.00008694, 0.00009977, 0.0001143, 0.00013109, 0.00015094, 0.00017523, 0.00020655, 0.00025069, 0.00032614}#0.00004
-multiLink.**.wlan[0].mac.dependentSignalPaths = true
+multiLink.**.wlan[0].mac.bitErrorRate = ${0.0, 0.00001389, 0.00002942, 0.00004703, 0.00006735, 0.00009139, 0.00012081, 0.00015874, 0.00021219, 0.00030356, 1}
+multiLink.**.wlan[0].mac.dependentSignalPaths = false
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
 *.**.wlan[*].mac.retryLimit = 0
 
 # CSMA/CA configuration
-
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = ${0, 28, 56, 84, 111, 139, 167, 196, 222}
+multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100,122,145,167,189,211}
 multiLink.**.wlan[0].mac.ta_enable = true
 #*.**.wlan[0].mac.cwMin = 82
 #*.**.wlan[0].mac.cwMax = 82
