added first methods for creating bar and boxplots for violation rates and latencies respectively

--- a/simulations/examples/WiMEPMultiLinkPriotization/WiMEPMultiLinkLatenciesPrio.ini
+++ b/simulations/examples/WiMEPMultiLinkPriotization/WiMEPMultiLinkLatenciesPrio.ini
@@ -32,9 +32,10 @@ multiLink.**.rtps.nbrReadersPerApp = ${3}
 multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 800
-multiLink.sender.rtps.writer[0].shaping = ${sh=400us}
+multiLink.sender.rtps.writer[0].shaping = ${sh=800us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
 multiLink.sender.rtps.writer[0].timeout = ${2*$sh - 1us}
+multiLink.sender.rtps.writer[0].prioritized = true
 
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
@@ -81,7 +82,10 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = ${0.0, 0.00001389, 0.00002942, 0.00004703, 0.00006735, 0.00009139, 0.00012081, 0.00015874, 0.00021219, 0.00030356, 1}
+multiLink.sender.wlan[0].mac.bitErrorRate = ${0.00006735}# 0.00004703
+multiLink.receivers[0].wlan[0].mac.bitErrorRate = ${0.00006735}
+multiLink.receivers[1].wlan[0].mac.bitErrorRate = ${0.00009139}
+multiLink.receivers[2].wlan[0].mac.bitErrorRate = ${0.00012081, 0.00015874, 0.00021219, 1}
 multiLink.**.wlan[0].mac.dependentSignalPaths = false
 
 # MAC retreansmissions
@@ -92,7 +96,7 @@ multiLink.**.wlan[0].mac.dependentSignalPaths = false
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100,122,145,167,189,211}
+multiLink.**.wlan[0].mac.ta = ${ta = 78}
 multiLink.**.wlan[0].mac.ta_enable = true
 #*.**.wlan[0].mac.cwMin = 82
 #*.**.wlan[0].mac.cwMax = 82
