--- a/simulations/examples/VaryingInterferenceWiMEP/VaryingInterferenceWiMEP.ini
+++ b/simulations/examples/VaryingInterferenceWiMEP/VaryingInterferenceWiMEP.ini
@@ -2,8 +2,8 @@
 [General]
 description = Two hosts communicating wirelessly
 network = simulations.networks.multiLink
-seed-0-mt=732195122
-sim-time-limit = 9.999999s
+seed-0-mt=532795
+sim-time-limit = 99.999999s
 **.startTime = 0s     
 
 # =================================================
@@ -15,7 +15,7 @@ multiLink.numberReceivingNodes = ${n=3}
 multiLink.sender.numberWriterApps = 1
 multiLink.receivers*.numberReaderApps = 1
 
-multiLink.sender.rtpsAppWriter[*].sampleSize = 20000B
+multiLink.sender.rtpsAppWriter[*].sampleSize = 412344B
 multiLink.sender.rtpsAppWriter[*].samplePeriod = 100ms
 multiLink.sender.rtpsAppWriter[*].jitter = 0ms 
 multiLink.sender.rtpsAppWriter[*].offset = 0ms
@@ -31,8 +31,8 @@ multiLink.**.rtps.nbrReadersPerApp = ${3}
 # Writer configuration  
 multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
-multiLink.sender.rtps.writer[0].fragmentSize = 800
-multiLink.sender.rtps.writer[0].shaping = ${sh=400us}
+multiLink.sender.rtps.writer[0].fragmentSize = 11454
+multiLink.sender.rtps.writer[0].shaping = ${sh=1000us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
 multiLink.sender.rtps.writer[0].timeout = ${2*$sh - 1us}
 
@@ -84,8 +84,10 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = ${0.0, 0.00001389, 0.00002942, 0.00004703, 0.00006735, 0.00009139, 0.00012081, 0.00015874, 0.00021219, 0.00030356, 1}
-multiLink.**.wlan[0].mac.dependentSignalPaths = false
+multiLink.**.wlan[0].mac.bitErrorRate = ${0, 0.00000055, 0.00000114, 0.00000175, 0.0000024, 0.0000031, 0.00000384, 0.00000464, 0.0000055, 0.00000644, 0.00000747, 0.0000086, 0.00000987, 0.00001131, 0.00001297, 0.00001494, 0.00001734, 0.00002044, 0.00002481, 0.00003228, 1}
+multiLink.**.wlan[0].mac.dependentSignalPaths = true
+
+multiLink.**.wlan[0].mac.mtu = 11454+200
 
 # MAC retreansmissions
 *.**.wlan[0].mac.useAck = false
@@ -95,17 +97,15 @@ multiLink.**.wlan[0].mac.dependentSignalPaths = false
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100,122,145,167,189,211}
+multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100}
 multiLink.**.wlan[0].mac.ta_enable = true
-#*.**.wlan[0].mac.cwMin = 82
-#*.**.wlan[0].mac.cwMax = 82
 
 # ======================================================
 # ================= Physical - Layer ===================
 # ======================================================
 
 
-multiLink.**.wlan[0].**.bitrate = 27Mbps
+multiLink.**.wlan[0].**.bitrate = 400Mbps
 
 *.**.wlan[0].radio.typename = "UnitDiskRadio"
 *.**.wlan[0].radio.transmitter.communicationRange = 1000m
