added adaptive prioritization policy

--- a/simulations/examples/WiMEPMultiLinkPriotization/WiMEPMultiLinkLatenciesPrio.ini
+++ b/simulations/examples/WiMEPMultiLinkPriotization/WiMEPMultiLinkLatenciesPrio.ini
@@ -36,6 +36,7 @@ multiLink.sender.rtps.writer[0].shaping = ${sh=800us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
 multiLink.sender.rtps.writer[0].timeout = ${2*$sh - 1us}
 multiLink.sender.rtps.writer[0].prioritized = true
+multiLink.sender.rtps.writer[0].prioMode = "FIXED"
 
 # Reader configuration
 multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
