--- a/simulations/examples/VaryingInterferenceWiMEP/VaryingInterferenceWiMEP.ini
+++ b/simulations/examples/VaryingInterferenceWiMEP/VaryingInterferenceWiMEP.ini
@@ -3,7 +3,7 @@
 description = Two hosts communicating wirelessly
 network = simulations.networks.multiLink
 seed-0-mt=532795
-sim-time-limit = 99.999999s
+sim-time-limit = 9.999999s
 **.startTime = 0s     
 
 # =================================================
@@ -32,9 +32,11 @@ multiLink.**.rtps.nbrReadersPerApp = ${3}
 multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 11454
-multiLink.sender.rtps.writer[0].shaping = ${sh=1000us}
+multiLink.sender.rtps.writer[0].shaping = ${sh=700us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
-multiLink.sender.rtps.writer[0].timeout = ${2*$sh - 1us}
+multiLink.sender.rtps.writer[0].timeout = ${4*$sh - 1us}
+multiLink.sender.rtps.writer[0].prioritized = true
+multiLink.sender.rtps.writer[0].prioMode = "ADAPTIVE"
 
 multiLink.sender.rtps.writer[0].enableNackSuppression = true
 multiLink.sender.rtps.writer[0].nackSuppressionDuration = ${2*$sh + 5us}
@@ -84,8 +86,8 @@ multiLink.**.wlan[0].mac.typename = "CsmaCaMacModified"
 multiLink.**.wlan[0].queue.typename = "DropTailQueue"
 
 multiLink.**.wlan[0].queue.packetCapacity = 100
-multiLink.**.wlan[0].mac.bitErrorRate = ${0, 0.00000055, 0.00000114, 0.00000175, 0.0000024, 0.0000031, 0.00000384, 0.00000464, 0.0000055, 0.00000644, 0.00000747, 0.0000086, 0.00000987, 0.00001131, 0.00001297, 0.00001494, 0.00001734, 0.00002044, 0.00002481, 0.00003228, 1}
-multiLink.**.wlan[0].mac.dependentSignalPaths = true
+multiLink.**.wlan[0].mac.bitErrorRate = ${0, 0.00000114, 0.0000024, 0.00000384, 0.0000055, 0.00000747, 0.00000987, 0.00001297, 0.00001734, 0.00002481, 1}#{0, 0.00000055, 0.00000114, 0.00000175, 0.0000024, 0.0000031, 0.00000384, 0.00000464, 0.0000055, 0.00000644, 0.00000747, 0.0000086, 0.00000987, 0.00001131, 0.00001297, 0.00001494, 0.00001734, 0.00002044, 0.00002481, 0.00003228, 1}
+multiLink.**.wlan[0].mac.dependentSignalPaths = false
 
 multiLink.**.wlan[0].mac.mtu = 11454+200
 
@@ -97,7 +99,7 @@ multiLink.**.wlan[0].mac.mtu = 11454+200
 multiLink.**.wlan[0].mac.sifsTime = 14us
 multiLink.**.wlan[0].mac.slotTime = 9us
 
-multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100}
+multiLink.**.wlan[0].mac.ta = ${ta = 11,33,55,78,100,122,145,167,189,211}
 multiLink.**.wlan[0].mac.ta_enable = true
 
 # ======================================================
