--- a/simulations/RTAS2023/VaryingInterferenceRTPS/VaryingInterferenceRTPS.ini
+++ b/simulations/RTAS2023/VaryingInterferenceRTPS/VaryingInterferenceRTPS.ini
@@ -29,26 +29,21 @@ multiLink.**.rtps.nbrApps = 1
 multiLink.**.rtps.nbrReadersPerApp = ${3}
 
 # Writer configuration  
-multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
+multiLink.sender.rtps.writer[0].typename = "Writer"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 11454
-multiLink.sender.rtps.writer[0].shaping = ${sh=700us}
+multiLink.sender.rtps.writer[0].shaping = ${sh=10us}
 multiLink.sender.rtps.writer[0].deadline = 100ms
-multiLink.sender.rtps.writer[0].timeout = ${4*$sh - 1us}
-multiLink.sender.rtps.writer[0].prioritized = true
-multiLink.sender.rtps.writer[0].prioMode = "ADAPTIVE"
+multiLink.sender.rtps.writer[0].hbPeriod = 3500us
+
 
 multiLink.sender.rtps.writer[0].enableNackSuppression = true
 multiLink.sender.rtps.writer[0].nackSuppressionDuration = ${2*$sh + 5us}
 
 # Reader configuration
-multiLink.receivers[*].rtps.reader[0].typename = "ReaderWiMEP"
+multiLink.receivers[*].rtps.reader[0].typename = "Reader"
 multiLink.receivers[*].rtps.reader[0].deadline = 100ms
 # TODO configure answer delay if configured
-
-multiLink.receivers[0].rtps.reader[0].priority = 1
-multiLink.receivers[1].rtps.reader[0].priority = 2
-multiLink.receivers[2].rtps.reader[0].priority = 3
 
 
 # =================================================
