--- a/simulations/PaperWirelessPipelining/testingBurstErrors/testingBurstErrors.ini
+++ b/simulations/PaperWirelessPipelining/testingBurstErrors/testingBurstErrors.ini
@@ -2,8 +2,8 @@
 [General]
 description = Two hosts communicating wirelessly
 network = simulations.networks.multiLink
-seed-0-mt=15785489
-sim-time-limit = 9999.999s
+seed-0-mt=${1,2,3,4,56,7,89,1,0,12,7,027,411,51,2455,74564,7120770}# 55,213422,4589,1452,5578945,454,75,454,5741,122657,478944,255552,4412444,855,1157895,4500,}
+sim-time-limit =9.999s
 **.startTime = 0s     
 
 # =================================================
@@ -33,7 +33,7 @@ multiLink.sender.rtps.writer[0].typename = "WriterWiMEP"
 multiLink.sender.rtps.writer[0].numberReaders = ${n}
 multiLink.sender.rtps.writer[0].fragmentSize = 11306
 multiLink.sender.rtps.writer[0].shaping = ${sh=1400us}
-multiLink.sender.rtps.writer[0].deadline = ${33333us, 100ms}
+multiLink.sender.rtps.writer[0].deadline = 100ms #${33333us, 100ms}
 multiLink.sender.rtps.writer[0].timeout = ${4*$sh - 1us}
 multiLink.sender.rtps.writer[0].prioritized = true
 multiLink.sender.rtps.writer[0].prioMode = "ADAPTIVE_LOW_PDR"
